@@ -9,6 +9,7 @@ Version 0.6.0 (unreleased)
 - Issue #52: Entry name on `entry/index` is a link now
 - Issue #51: Added default order for `entry/index` and `tag/index`
 - Issue #46: Added support for alternate database host port
+- Issue #22: Added double check password when create admin user
 - Bug: CSV-Export has no `csv`-extension
 - Bug: CSV-Import doesn't work with PHP7
 - Bug: Import: Remove entries before saving doesn't work
